@@ -1,0 +1,12 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Lutetium aluminium garnet, Lu<sub>3</sub>Al<sub>5</sub>O<sub>1</sub><sub>2</sub> (LuAG)</h1>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Lutetium_aluminium_garnet">Lutetium aluminium garnet - Wikipedia</a></li>
+</ul>
